--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       ARTIFACTS_DIR: exported-artifacts
 
     container:
-      image: quay.io/ovirt/buildcontainer:${{ matrix.container-name }}
+      image: ghcr.io/dupondje/buildcontainer:${{ matrix.container-name }}
 
     steps:
     - name: Checkout sources
